feat(docs): add swagger api documentation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,10 @@ spring.mail.username=
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.smtp.starttls.enable=false
-
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui-custom.html
+springdoc.info.title=Project Tracker Rest API
+springdoc.info.description=API for project tracking application
+springdoc.info.version=1.0.0
+springdoc.info.contact.name=Roger Dankudi Satsi
+springdoc.info.contact.email=rogersatsi98@outlook.com
