chore(config): update config file to retrieve settings from .env

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,28 @@
 spring.application.name=tracker
-spring.datasource.url=jdbc:postgresql://localhost:5432/tracker
-spring.datasource.username=postgres
-spring.datasource.password=Around22!
+
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.data.mongodb.uri=mongodb://localhost:27017/admin
+
+
+spring.data.mongodb.uri=${MONGO_URI}
 spring.data.mongodb.auto-index-creation=true
-spring.mail.host=localhost
-spring.mail.port=1025
-spring.mail.username=
-spring.mail.password=
+
+jwt.secret=${JWT_SECRET}
+jwt.access-expiration=${JWT_ACCESS_EXPIRATION}
+jwt.refresh-expiration-ms=${JWT_REFRESH_EXPIRATION}
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.smtp.starttls.enable=false
+
+
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 springdoc.info.title=Project Tracker Rest API
@@ -20,3 +30,18 @@ springdoc.info.description=API for project tracking application
 springdoc.info.version=1.0.0
 springdoc.info.contact.name=Roger Dankudi Satsi
 springdoc.info.contact.email=rogersatsi98@outlook.com
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.scope=profile,email
+spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_REDIRECT_URI}
+
+logging.level.org.springframework.security=TRACE
+logging.level.com.task.tracker.services=DEBUG
+
+spring.profiles.active=dev
