--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,16 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'io.github.cdimascio:dotenv-java:3.0.0'
-
+    implementation 'com.github.ben-manes.caffeine:caffeine:3.2.0'
+    implementation 'org.springframework.boot:spring-boot-starter-cache:3.5.0'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.5.0'
     runtimeOnly 'com.h2database:h2:2.2.224'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+    implementation 'io.micrometer:micrometer-core'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'io.lettuce:lettuce-core:6.7.1.RELEASE'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+
 }
 
 
