chore(optimizations): add environment variables for redis and configurations for cache metrics and actuator result exposure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,7 +41,18 @@ spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_
 spring.security.oauth2.client.registration.google.scope=profile,email
 spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_REDIRECT_URI}
 
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=${REDIS_PORT}
+spring.cache.type=${CACHE_TYPE}
+
 logging.level.org.springframework.security=TRACE
 logging.level.com.task.tracker.services=DEBUG
 
 spring.profiles.active=dev
+
+management.metrics.enable.caffeine=true
+spring.cache.caffeine.spec=recordStats
+management.endpoint.metrics.access=unrestricted
+management.metrics.enable.redis=true
+management.endpoints.web.exposure.include=*
+management.prometheus.metrics.export.enabled=true
