chore: expose required metric endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,5 +54,6 @@ management.metrics.enable.caffeine=true
 spring.cache.caffeine.spec=recordStats
 management.endpoint.metrics.access=unrestricted
 management.metrics.enable.redis=true
-management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=prometheus, heapdump, metrics, info
 management.prometheus.metrics.export.enabled=true
+logging.level.org.springframework.cache=DEBUG
