Revert "chore: expose required metric endpoints"
This reverts commit 980bb93b5807b3ace49241537a50c21b869aa87e.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,6 +54,5 @@ management.metrics.enable.caffeine=true
 spring.cache.caffeine.spec=recordStats
 management.endpoint.metrics.access=unrestricted
 management.metrics.enable.redis=true
-management.endpoints.web.exposure.include=prometheus, heapdump, metrics, info
+management.endpoints.web.exposure.include=*
 management.prometheus.metrics.export.enabled=true
-logging.level.org.springframework.cache=DEBUG
